--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="hero">
     <video autoplay muted loop id="bg-video" playsinline>
-      <source src="video-barber.mp4" type="video/mp4">
+      <source src="video-baber.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <div class="hero-content">
