--- a/reserva.html
+++ b/reserva.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reservar turno - Boga’s Barbershop</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="hero small">
@@ -27,7 +27,7 @@
         <option value="Combo">Combo</option>
       </select>
 
-      <select id="barbero" required onchange="cargarHorarios()">
+      <select id="barbero" required>
         <option value="">-- Selecciona Barbero --</option>
         <option value="Carlos">Carlos</option>
         <option value="Martín">Martín</option>
@@ -39,9 +39,7 @@
     </form>
   </section>
 
-  <footer>
-    <p>© 2025 Boga’s Barbershop</p>
-  </footer>
+  <footer><p>© 2025 Boga’s Barbershop</p></footer>
 
   <script src="script.js"></script>
 </body>
